--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,5 +2,6 @@ name: dart_toy
 description: A sample web application
 dependencies:
   browser: any
+  polymer: ">=0.10.0 <0.11.0"
 dev_dependencies:
   unittest: '>=0.11.0'
