--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,3 +5,6 @@ dependencies:
   polymer: ">=0.10.0 <0.11.0"
 dev_dependencies:
   unittest: '>=0.11.0'
+transformers:
+  - polymer:
+    entry_points: web/dijkstra/dijkstra.html
